tests/snapshots/parser__if_else__if_missing_braces.snap
---
source: tests/parser.rs
expression: "parse(\"if x print(x)\")"
---
Err(
    ParseError {
        message: "expected `{` after if condition, found Identifier(\"print\")",
        span: Span {
            start: 5,
            end: 10,
        },
    },
)
