tests/snapshots/parser__if_else__if_missing_condition.snap
---
source: tests/parser.rs
expression: "parse(\"if { print(x) }\")"
---
Err(
    ParseError {
        message: "expected condition after `if`, found `{`",
        span: Span {
            start: 3,
            end: 4,
        },
    },
)
