tests/snapshots/parser__if_else__if_only.snap
---
source: tests/parser.rs
expression: "parse(\"if x { print(x) }\")"
---
Ok(
    [
        If {
            cond: Identifier(
                "x",
                Span {
                    start: 3,
                    end: 4,
                },
            ),
            then_block: Block {
                stmts: [
                    Expr(
                        Call {
                            callee: Identifier(
                                "print",
                                Span {
                                    start: 7,
                                    end: 12,
                                },
                            ),
                            args: [
                                Identifier(
                                    "x",
                                    Span {
                                        start: 13,
                                        end: 14,
                                    },
                                ),
                            ],
                            span: Span {
                                start: 7,
                                end: 15,
                            },
                        },
                    ),
                ],
                span: Span {
                    start: 5,
                    end: 17,
                },
            },
            else_branch: None,
            span: Span {
                start: 0,
                end: 17,
            },
        },
    ],
)
